5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1671_1107.log
== SUBMITION (2019-04-29 20:59:59) 
-- CODE:
d= int (input("Qual o dia?"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias?"))
	d1= (d+j)%7
	if(d==0):
		d1= "domingo"
	elif(d==1):
		d1= "segunda"
	elif(d==2):
		d= "terça"
	elif(d==3):
		d1= "quarta"	
	elif(d==4):
		d1= "quinta"	
	elif(d==5):
		d1= "sexta"
	elif(d==6):
		d1= "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- EXECUTION TIME:
0.180131
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh 6 e o dia futuro eh sabado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:00:31) 
-- CODE:
d= int (input("Qual o dia?"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias?"))
	d1= (d+j)%7
	if(d==0):
		d1= "domingo"
	elif(d==1):
		d1= "segunda"
	elif(d==2):
		d= "terça"
	elif(d==3):
		d1= "quarta"	
	elif(d==4):
		d1= "quinta"	
	elif(d==5):
		d1= "sexta"
	elif(d==6):
		d1= "sabado"
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:20:18) 
-- CODE:
d = int (input("Qual o dia?"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias?"))
	d1= (d+j)%7
	if(d==0):
		d= "domingo"
	elif(d==1):
		d= "segunda"
	elif(d==2):
		d= "terça"
	elif(d==3):
		d= "quarta"	
	elif(d==4):
		d= "quinta"	
	elif(d==5):
		d= "sexta"
	elif(d==6):
		d= "sabado"
	elif(d1==0):
		d1="domingo"
	elif(d1==1):
		d1="segunda"
	elif(d1==2):
		d1="terça"
	elif(d1==3):
		d1="quarta"
	elif(d1==4):
		d1="quinta"
	elif(d1==5):
		d1="sexta"
	elif(d1==6):
		d1="sabado"	
	
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- EXECUTION TIME:
0.141273
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:20:21) 
-- CODE:
d = int (input("Qual o dia?"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias?"))
	d1= (d+j)%7
	if(d==0):
		d= "domingo"
	elif(d==1):
		d= "segunda"
	elif(d==2):
		d= "terça"
	elif(d==3):
		d= "quarta"	
	elif(d==4):
		d= "quinta"	
	elif(d==5):
		d= "sexta"
	elif(d==6):
		d= "sabado"
	elif(d1==0):
		d1="domingo"
	elif(d1==1):
		d1="segunda"
	elif(d1==2):
		d1="terça"
	elif(d1==3):
		d1="quarta"
	elif(d1==4):
		d1="quinta"
	elif(d1==5):
		d1="sexta"
	elif(d1==6):
		d1="sabado"	
	
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:20:57) 
-- CODE:
d = int (input("Qualodia"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias"))
	d1= (d+j)%7
	if(d==0):
		d= "domingo"
	elif(d==1):
		d= "segunda"
	elif(d==2):
		d= "terça"
	elif(d==3):
		d= "quarta"	
	elif(d==4):
		d= "quinta"	
	elif(d==5):
		d= "sexta"
	elif(d==6):
		d= "sabado"
	elif(d1==0):
		d1="domingo"
	elif(d1==1):
		d1="segunda"
	elif(d1==2):
		d1="terça"
	elif(d1==3):
		d1="quarta"
	elif(d1==4):
		d1="quinta"
	elif(d1==5):
		d1="sexta"
	elif(d1==6):
		d1="sabado"	
	
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:21:00) 
-- CODE:
d = int (input("Qualodia"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias"))
	d1= (d+j)%7
	if(d==0):
		d= "domingo"
	elif(d==1):
		d= "segunda"
	elif(d==2):
		d= "terça"
	elif(d==3):
		d= "quarta"	
	elif(d==4):
		d= "quinta"	
	elif(d==5):
		d= "sexta"
	elif(d==6):
		d= "sabado"
	elif(d1==0):
		d1="domingo"
	elif(d1==1):
		d1="segunda"
	elif(d1==2):
		d1="terça"
	elif(d1==3):
		d1="quarta"
	elif(d1==4):
		d1="quinta"
	elif(d1==5):
		d1="sexta"
	elif(d1==6):
		d1="sabado"	
	
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- EXECUTION TIME:
0.151685
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:21:03) 
-- CODE:
d = int (input("Qualodia"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias"))
	d1= (d+j)%7
	if(d==0):
		d= "domingo"
	elif(d==1):
		d= "segunda"
	elif(d==2):
		d= "terça"
	elif(d==3):
		d= "quarta"	
	elif(d==4):
		d= "quinta"	
	elif(d==5):
		d= "sexta"
	elif(d==6):
		d= "sabado"
	elif(d1==0):
		d1="domingo"
	elif(d1==1):
		d1="segunda"
	elif(d1==2):
		d1="terça"
	elif(d1==3):
		d1="quarta"
	elif(d1==4):
		d1="quinta"
	elif(d1==5):
		d1="sexta"
	elif(d1==6):
		d1="sabado"	
	
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:22:06) 
-- CODE:
d = int (input("Qualodia"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias"))
	d1= (d+j)%7
	if(d==0):
		d= "domingo"
	elif(d==1):
		d= "segunda"
	elif(d==2):
		d= "terça"
	elif(d==3):
		d= "quarta"	
	elif(d==4):
		d= "quinta"	
	elif(d==5):
		d= "sexta"
	elif(d==6):
		d= "sabado"
	elif(d1==0):
		d1="domingo"
	elif(d1==1):
		d1="segunda"
	elif(d1==2):
		d1="terça"
	elif(d1==3):
		d1="quarta"
	elif(d1==4):
		d1="quinta"
	elif(d1==5):
		d1="sexta"
	elif(d1==6):
		d1="sabado"	
	
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:22:47) 
-- CODE:
d = int (input("Qualodia"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias"))
	d1= (d+j)%7
	if(d==0):
		d= "domingo"
	elif(d==segunda):
		d= "1"
	elif(d==2):
		d= "terça"
	elif(d==3):
		d= "quarta"	
	elif(d==4):
		d= "quinta"	
	elif(d==5):
		d= "sexta"
	elif(d==6):
		d= "sabado"
	elif(d1==0):
		d1="domingo"
	elif(d1==1):
		d1="segunda"
	elif(d1==2):
		d1="terça"
	elif(d1==3):
		d1="quarta"
	elif(d1==4):
		d1="quinta"
	elif(d1==5):
		d1="sexta"
	elif(d1==6):
		d1="sabado"	
	
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 21:23:14) 
-- CODE:
d = int (input("Qualodia"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias"))
	d1= (d+j)%7
	if(d==0):
		d= "domingo"
	elif(d==1):
		d="segunda"
	elif(d==2):
		d= "terça"
	elif(d==3):
		d= "quarta"	
	elif(d==4):
		d= "quinta"	
	elif(d==5):
		d= "sexta"
	elif(d==6):
		d= "sabado"
	elif(d1==0):
		d1="domingo"
	elif(d1==1):
		d1="segunda"
	elif(d1==2):
		d1="terça"
	elif(d1==3):
		d1="quarta"
	elif(d1==4):
		d1="quinta"
	elif(d1==5):
		d1="sexta"
	elif(d1==6):
		d1="sabado"	
	
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- EXECUTION TIME:
0.154448
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:23:16) 
-- CODE:
d = int (input("Qualodia"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias"))
	d1= (d+j)%7
	if(d==0):
		d= "domingo"
	elif(d==1):
		d="segunda"
	elif(d==2):
		d= "terça"
	elif(d==3):
		d= "quarta"	
	elif(d==4):
		d= "quinta"	
	elif(d==5):
		d= "sexta"
	elif(d==6):
		d= "sabado"
	elif(d1==0):
		d1="domingo"
	elif(d1==1):
		d1="segunda"
	elif(d1==2):
		d1="terça"
	elif(d1==3):
		d1="quarta"
	elif(d1==4):
		d1="quinta"
	elif(d1==5):
		d1="sexta"
	elif(d1==6):
		d1="sabado"	
	
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 21:23:55) 
-- CODE:
d = int (input("Qualodia"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias"))
	d1= (d+j)%7
	if(d==0):
		d= "domingo"
	elif(d==1):
		print("segunda")
	elif(d==2):
		d= "terça"
	elif(d==3):
		d= "quarta"	
	elif(d==4):
		d= "quinta"	
	elif(d==5):
		d= "sexta"
	elif(d==6):
		d= "sabado"
	elif(d1==0):
		d1="domingo"
	elif(d1==1):
		d1="segunda"
	elif(d1==2):
		d1="terça"
	elif(d1==3):
		d1="quarta"
	elif(d1==4):
		d1="quinta"
	elif(d1==5):
		d1="sexta"
	elif(d1==6):
		d1="sabado"	
	
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:00:32) 
-- CODE:
d = int (input("Qualodia"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias"))
	d1= (d+j)%7
	if(d==0):
		d= "domingo"
	elif(d==1):
		print("segunda")
	elif(d==2):
		d= "terça"
	elif(d==3):
		d= "quarta"	
	elif(d==4):
		d= "quinta"	
	elif(d==5):
		d= "sexta"
	elif(d==6):
		d= "sabado"
	elif(d1==0):
		d1="domingo"
	elif(d1==1):
		d1= "segunda"
	elif(d1==2):
		d1= "terça"
	elif(d1==3):
		d1= "quarta"
	elif(d1==4):
		d1= "quinta"
	elif(d1==5):
		d1= "sexta"
	elif(d1==6):
		d1= "sabado"	
	
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- EXECUTION TIME:
0.220568
-- TEST CASE 1:
---- input:
9
9

---- correct output:
A entrada 9 eh invalida
---- user output:
A entrada 9 eh invalida
-- TEST CASE 2:
---- input:
6
1024
---- correct output:
Hoje eh sabado e o dia futuro eh segunda
---- user output:
Hoje eh sabado e o dia futuro eh 1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:00:35) 
-- CODE:
d = int (input("Qualodia"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias"))
	d1= (d+j)%7
	if(d==0):
		d= "domingo"
	elif(d==1):
		print("segunda")
	elif(d==2):
		d= "terça"
	elif(d==3):
		d= "quarta"	
	elif(d==4):
		d= "quinta"	
	elif(d==5):
		d= "sexta"
	elif(d==6):
		d= "sabado"
	elif(d1==0):
		d1="domingo"
	elif(d1==1):
		d1= "segunda"
	elif(d1==2):
		d1= "terça"
	elif(d1==3):
		d1= "quarta"
	elif(d1==4):
		d1= "quinta"
	elif(d1==5):
		d1= "sexta"
	elif(d1==6):
		d1= "sabado"	
	
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- OUTPUT:
A entrada 9 eh invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 23:02:27) 
-- CODE:
d = int (input("Qualodia"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias"))
	d1= (d+j)%7
	if(d==0):
		d= "domingo"
	elif(d==1):
		print("segunda")
	elif(d==2):
		d= "terça"
	elif(d==3):
		d= "quarta"	
	elif(d==4):
		d= "quinta"	
	elif(d==5):
		d= "sexta"
	elif(d==6):
		d= "sabado"
	elif(d1==0):
		d1="domingo"
	elif(d1=1):
		d1= "segunda"
	elif(d1==2):
		d1= "terça"
	elif(d1==3):
		d1= "quarta"
	elif(d1==4):
		d1= "quinta"
	elif(d1==5):
		d1= "sexta"
	elif(d1==6):
		d1= "sabado"	
	
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- EXECUTION TIME:
0.162649
-- ERROR:
  File "/home/codebench/codes/1671/1107/main.py", line 21
    elif(d1=1):
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:02:31) 
-- CODE:
d = int (input("Qualodia"))
if((d>=0 and d<=6)):
	j = int(input("quantos dias"))
	d1= (d+j)%7
	if(d==0):
		d= "domingo"
	elif(d==1):
		print("segunda")
	elif(d==2):
		d= "terça"
	elif(d==3):
		d= "quarta"	
	elif(d==4):
		d= "quinta"	
	elif(d==5):
		d= "sexta"
	elif(d==6):
		d= "sabado"
	elif(d1==0):
		d1="domingo"
	elif(d1=1):
		d1= "segunda"
	elif(d1==2):
		d1= "terça"
	elif(d1==3):
		d1= "quarta"
	elif(d1==4):
		d1= "quinta"
	elif(d1==5):
		d1= "sexta"
	elif(d1==6):
		d1= "sabado"	
	
	print("Hoje eh",d,"e o dia futuro eh",d1)
else:
	print("A entrada",d,"eh invalida")
		
-- ERROR:
File "XXXX", line 21
    elif(d1=1):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
